src/test/ui/structs/struct-path-alias-bounds.stderr
error: the trait bound `NoClone: std::clone::Clone` is not satisfied
  --> $DIR/struct-path-alias-bounds.rs:16:10
   |
LL | type A = S<NoClone>;
   |          ^^^^^^^^^^ the trait `std::clone::Clone` is not implemented for `NoClone`
   |
   = note: #[deny(type_alias_missing_bounds)] on by default
   = help: missing bounds in type aliases were previously allowed
   = help: this is a hard error in Rust 2018

error: aborting due to previous error

